feature : new bacgkround music

--- a/Thief-Buster-2Dgame/Info.plist
+++ b/Thief-Buster-2Dgame/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Pixeled.ttf</string>
+		<string>Pixellari.ttf</string>
 	</array>
 </dict>
 </plist>
